Minor section additions

--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@
                         </span>
                         <ul>
                             <li><a href="#section-database-rds"><span class="lbl">RDS</span></a></li>
+                            <li><a href="#section-database-elasticache"><span class="lbl">ElastiCache</span></a></li>
                         </ul>
                     </li>
                     <li class="aquamarine with-sub">
