--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Former2</title>
 
-        <link href="img/apple-touch-icon.png" rel="apple-touch-icon" type="image/png">
-        <link href="img/favicon.png" rel="icon" type="image/png">
-        <link href="favicon.ico" rel="shortcut icon">
+        <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
+        <link rel="manifest" href="/img/site.webmanifest">
+        <link rel="mask-icon" href="/img/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">
+        <link href="/favicon.ico" rel="shortcut icon">
 
         <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
