--- a/index.html
+++ b/index.html
@@ -263,6 +263,8 @@
                         </span>
                         <ul>
                             <li><a href="#section-storage-s3"><span class="lbl">S3</span></a></li>
+                            <li><a href="#section-storage-efs"><span class="lbl">EFS</span></a></li>
+                            <li><a href="#section-storage-fsx"><span class="lbl">FSx</span></a></li>
                         </ul>
                     </li>
                     <li class="blue with-sub">
@@ -272,8 +274,11 @@
                         </span>
                         <ul>
                             <li><a href="#section-database-rds"><span class="lbl">RDS</span></a></li>
+                            <li><a href="#section-database-dynamodb"><span class="lbl">DynamoDB</span></a></li>
                             <li><a href="#section-database-elasticache"><span class="lbl">ElastiCache</span></a></li>
+                            <li><a href="#section-database-neptune"><span class="lbl">Neptune</span></a></li>
                             <li><a href="#section-database-redshift"><span class="lbl">Redshift</span></a></li>
+                            <li><a href="#section-database-documentdb"><span class="lbl">DocumentDB</span></a></li>
                         </ul>
                     </li>
                     <li class="aquamarine with-sub">
@@ -282,7 +287,7 @@
                             <span class="lbl">Migration &amp; Transfer</span>
                         </span>
                         <ul>
-                            <li><a href="#section-storage-unknown"><span class="lbl">TBC</span></a></li>
+                            <li><a href="#section-storage-transferforsftp"><span class="lbl">Transfer for SFTP</span></a></li>
                         </ul>
                     </li>
                     <li class="purple with-sub">
@@ -292,7 +297,10 @@
                         </span>
                         <ul>
                             <li><a href="#section-networkingandcontentdelivery-vpc"><span class="lbl">VPC</span></a></li>
+                            <li><a href="#section-networkingandcontentdelivery-cloudfront"><span class="lbl">CloudFront</span></a></li>
                             <li><a href="#section-networkingandcontentdelivery-route53"><span class="lbl">Route 53</span></a></li>
+                            <li><a href="#section-networkingandcontentdelivery-apigateway"><span class="lbl">API Gateway</span></a></li>
+                            <li><a href="#section-networkingandcontentdelivery-cloudmap"><span class="lbl">Cloud Map</span></a></li>
                         </ul>
                     </li>
                     <li class="blue with-sub">
@@ -301,7 +309,11 @@
                             <span class="lbl">Developer Tools</span>
                         </span>
                         <ul>
-                            <li><a href="#section-storage-unknown"><span class="lbl">TBC</span></a></li>
+                            <li><a href="#section-developertools-codecommit"><span class="lbl">CodeCommit</span></a></li>
+                            <li><a href="#section-developertools-codebuild"><span class="lbl">CodeBuild</span></a></li>
+                            <li><a href="#section-developertools-codedeploy"><span class="lbl">CodeDeploy</span></a></li>
+                            <li><a href="#section-developertools-codepipeline"><span class="lbl">CodePipeline</span></a></li>
+                            <li><a href="#section-developertools-cloud9"><span class="lbl">Cloud9</span></a></li>
                         </ul>
                     </li>
                     <li class="red with-sub">
@@ -310,7 +322,7 @@
                             <span class="lbl">Robotics</span>
                         </span>
                         <ul>
-                            <li><a href="#section-storage-unknown"><span class="lbl">TBC</span></a></li>
+                            <li><a href="#section-robotics-robomaker"><span class="lbl">RoboMaker</span></a></li>
                         </ul>
                     </li>
                     <li class="pink with-sub">
@@ -319,7 +331,15 @@
                             <span class="lbl">Management &amp; Governance</span>
                         </span>
                         <ul>
-                            <li><a href="#section-storage-unknown"><span class="lbl">TBC</span></a></li>
+                            <li><a href="#section-managementandgovernance-cloudwatch"><span class="lbl">CloudWatch</span></a></li>
+                            <li><a href="#section-managementandgovernance-autoscaling"><span class="lbl">Auto Scaling</span></a></li>
+                            <li><a href="#section-managementandgovernance-cloudformation"><span class="lbl">CloudFormation</span></a></li>
+                            <li><a href="#section-managementandgovernance-cloudtrail"><span class="lbl">CloudTrail</span></a></li>
+                            <li><a href="#section-managementandgovernance-config"><span class="lbl">Config</span></a></li>
+                            <li><a href="#section-managementandgovernance-opsworks"><span class="lbl">OpsWorks</span></a></li>
+                            <li><a href="#section-managementandgovernance-servicecatalog"><span class="lbl">Service Catalog</span></a></li>
+                            <li><a href="#section-managementandgovernance-systemsmanager"><span class="lbl">Systems Manager</span></a></li>
+                            <li><a href="#section-managementandgovernance-licensemanager"><span class="lbl">License Manager</span></a></li>
                         </ul>
                     </li>
                     <li class="aquamarine with-sub">
@@ -328,7 +348,7 @@
                             <span class="lbl">Machine Learning</span>
                         </span>
                         <ul>
-                            <li><a href="#section-storage-unknown"><span class="lbl">TBC</span></a></li>
+                            <li><a href="#section-machinelearning-sagemaker"><span class="lbl">SageMaker</span></a></li>
                         </ul>
                     </li>
                     <li class="purple with-sub">
@@ -337,7 +357,12 @@
                             <span class="lbl">Analytics</span>
                         </span>
                         <ul>
-                            <li><a href="#section-storage-unknown"><span class="lbl">TBC</span></a></li>
+                            <li><a href="#section-analytics-athena"><span class="lbl">Athena</span></a></li>
+                            <li><a href="#section-analytics-emr"><span class="lbl">EMR</span></a></li>
+                            <li><a href="#section-analytics-elasticsearchservice"><span class="lbl">Elasticsearch Service</span></a></li>
+                            <li><a href="#section-analytics-kinesis"><span class="lbl">Kinesis</span></a></li>
+                            <li><a href="#section-analytics-datapipeline"><span class="lbl">Data Pipeline</span></a></li>
+                            <li><a href="#section-analytics-glue"><span class="lbl">Glue</span></a></li>
                         </ul>
                     </li>
                     <li class="red with-sub">
@@ -346,7 +371,17 @@
                             <span class="lbl">Security, Identity &amp; Compliance</span>
                         </span>
                         <ul>
-                            <li><a href="#section-storage-unknown"><span class="lbl">TBC</span></a></li>
+                            <li><a href="#section-securityidentityandcompliance-iam"><span class="lbl">IAM</span></a></li>
+                            <li><a href="#section-securityidentityandcompliance-resourceaccessmanager"><span class="lbl">Resource Access Manager</span></a></li>
+                            <li><a href="#section-securityidentityandcompliance-cognito"><span class="lbl">Cognito</span></a></li>
+                            <li><a href="#section-securityidentityandcompliance-secretsmanager"><span class="lbl">Secrets Manager</span></a></li>
+                            <li><a href="#section-securityidentityandcompliance-guardduty"><span class="lbl">GuardDuty</span></a></li>
+                            <li><a href="#section-securityidentityandcompliance-inspector"><span class="lbl">Inspector</span></a></li>
+                            <li><a href="#section-securityidentityandcompliance-certificatemanager"><span class="lbl">Certificate Manager</span></a></li>
+                            <li><a href="#section-securityidentityandcompliance-kms"><span class="lbl">KMS</span></a></li>
+                            <li><a href="#section-securityidentityandcompliance-cloudhsm"><span class="lbl">CloudHSM</span></a></li>
+                            <li><a href="#section-securityidentityandcompliance-directoryservice"><span class="lbl">Directory Service</span></a></li>
+                            <li><a href="#section-securityidentityandcompliance-wafandshield"><span class="lbl">WAF &amp; Shield</span></a></li>
                         </ul>
                     </li>
                     <li class="red with-sub">
@@ -355,7 +390,7 @@
                             <span class="lbl">Mobile</span>
                         </span>
                         <ul>
-                            <li><a href="#section-storage-unknown"><span class="lbl">TBC</span></a></li>
+                            <li><a href="#section-mobile-appsync"><span class="lbl">AppSync</span></a></li>
                         </ul>
                     </li>
                     <li class="pink with-sub">
@@ -364,6 +399,8 @@
                             <span class="lbl">Application Integration</span>
                         </span>
                         <ul>
+                            <li><a href="#section-applicationintegration-stepfunctions"><span class="lbl">Step Functions</span></a></li>
+                            <li><a href="#section-applicationintegration-amazonmq"><span class="lbl">Amazon MQ</span></a></li>
                             <li><a href="#section-applicationintegration-sns"><span class="lbl">SNS</span></a></li>
                             <li><a href="#section-applicationintegration-sqs"><span class="lbl">SQS</span></a></li>
                         </ul>
@@ -374,7 +411,7 @@
                             <span class="lbl">AWS Cost Management</span>
                         </span>
                         <ul>
-                            <li><a href="#section-storage-unknown"><span class="lbl">TBC</span></a></li>
+                            <li><a href="#section-awscostmanagement-budgets"><span class="lbl">Budgets</span></a></li>
                         </ul>
                     </li>
                     <li class="blue with-sub">
@@ -383,7 +420,7 @@
                             <span class="lbl">Customer Engagement</span>
                         </span>
                         <ul>
-                            <li><a href="#section-storage-unknown"><span class="lbl">TBC</span></a></li>
+                            <li><a href="#section-customerengagement-ses"><span class="lbl">SES</span></a></li>
                         </ul>
                     </li>
                     <li class="red with-sub">
@@ -392,7 +429,8 @@
                             <span class="lbl">End User Computing</span>
                         </span>
                         <ul>
-                            <li><a href="#section-storage-unknown"><span class="lbl">TBC</span></a></li>
+                            <li><a href="#section-endusercomputing-workspaces"><span class="lbl">WorkSpaces</span></a></li>
+                            <li><a href="#section-endusercomputing-appstream"><span class="lbl">AppStream</span></a></li>
                         </ul>
                     </li>
                     <li class="green with-sub">
@@ -401,7 +439,9 @@
                             <span class="lbl">Internet Of Things</span>
                         </span>
                         <ul>
-                            <li><a href="#section-storage-unknown"><span class="lbl">TBC</span></a></li>
+                            <li><a href="#section-internetofthings-core"><span class="lbl">Core</span></a></li>
+                            <li><a href="#section-internetofthings-1click"><span class="lbl">1-Click</span></a></li>
+                            <li><a href="#section-internetofthings-analytics"><span class="lbl">Analytics</span></a></li>
                         </ul>
                     </li>
                     <li class="purple with-sub">
@@ -410,7 +450,7 @@
                             <span class="lbl">Game Development</span>
                         </span>
                         <ul>
-                            <li><a href="#section-storage-unknown"><span class="lbl">TBC</span></a></li>
+                            <li><a href="#section-gamedevelopment-gamelift"><span class="lbl">GameLift</span></a></li>
                         </ul>
                     </li>
                 </ul>
