--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                     </div>
 
                     <div class="steps-numeric-inner">
-                        <header class="steps-numeric-title">How former2 works:</header>
+                        <header class="steps-numeric-title">How Former2 works:</header>
                         <p>TBC</p>
                         <p><a href="https://chrome.google.com/webstore/detail/former2-helper/fhejmeojlbhfhjndnkkleooeejklmigi" target="_blank">Link to Helper Extension</a></p>
                     </div>
@@ -482,13 +482,13 @@
                     <div class="steps-numeric-inner">
                         <header class="steps-numeric-title">Enter your IAM credentials:</header>
                         <div class="form-group">
-                            <input id="credentials-accesskey" type="text" class="form-control" placeholder="Access Key"/>
+                            <input id="credentials-accesskey" type="text" class="form-control credentials-field" placeholder="Access Key"/>
                         </div>
                         <div class="form-group">
-                            <input id="credentials-secretkey" type="text" class="form-control" placeholder="Secret Key"/>
+                            <input id="credentials-secretkey" type="text" class="form-control credentials-field" placeholder="Secret Key"/>
                         </div>
                         <div class="form-group">
-                            <input id="credentials-sessiontoken" type="text" class="form-control" placeholder="Session Token (optional)"/>
+                            <input id="credentials-sessiontoken" type="text" class="form-control credentials-field" placeholder="Session Token (optional)"/>
                         </div>
                     </div>
 
