--- a/index.html
+++ b/index.html
@@ -518,6 +518,11 @@
                                 <i class="font-icon font-icon-scanner"></i> Scan Account
                             </button>
                         </div>
+                        <div class="form-group">
+                            <button id="add-all-resources" class="btn btn-secondary">
+                                <i class="font-icon font-icon-scanner"></i> Add All Resources
+                            </button>
+                        </div>
                     </div>
 
                     <div class="tbl steps-numeric-footer">
