--- a/index.html
+++ b/index.html
@@ -198,12 +198,8 @@
                         <li><a href="#section-outputs-cloudformation"><span class="lbl">CloudFormation</span></a></li>
                         <li><a href="#section-outputs-terraform"><span class="lbl">Terraform</span></a></li>
                         <li><a href="#section-outputs-troposphere"><span class="lbl">Troposphere</span></a></li>
-                        <li><a href="#section-outputs-boto3"><span class="lbl">Boto3 (Python)</span></a></li>
                         <li><a href="#section-outputs-cdkts"><span class="lbl">CDK (TS)</span></a></li>
-                        <li><a href="#section-outputs-cli"><span class="lbl">AWS CLI</span></a></li>
                         <li><a href="#section-outputs-iam"><span class="lbl">IAM</span></a></li>
-                        <li><a href="#section-outputs-js"><span class="lbl">JavaScript</span></a></li>
-                        <li><a href="#section-outputs-go"><span class="lbl">Go SDK (v1)</span></a></li>
                         <li><a href="#section-outputs-raw"><span class="lbl">Raw Output (Debug)</span></a></li>
                     </ul>
                 </li>
@@ -295,7 +291,6 @@
                         <ul>
                             <li><a href="#section-managementandgovernance-cloudwatch"><span class="lbl">CloudWatch</span></a></li>
                             <li><a href="#section-managementandgovernance-autoscaling"><span class="lbl">Auto Scaling</span></a></li>
-                            <li><a href="#section-managementandgovernance-cloudformation"><span class="lbl">CloudFormation</span></a></li>
                             <li><a href="#section-managementandgovernance-cloudtrail"><span class="lbl">CloudTrail</span></a></li>
                             <li><a href="#section-managementandgovernance-config"><span class="lbl">Config</span></a></li>
                             <li><a href="#section-managementandgovernance-opsworks"><span class="lbl">OpsWorks</span></a></li>
@@ -321,7 +316,7 @@
                         <ul>
                             <li><a href="#section-analytics-athena"><span class="lbl">Athena</span></a></li>
                             <li><a href="#section-analytics-emr"><span class="lbl">EMR</span></a></li>
-                            <li><a href="#section-analytics-elasticsearchservice"><span class="lbl">Elasticsearch Service</span></a></li>
+                            <li><a href="#section-analytics-elasticsearchservice"><span class="lbl">Elasticsearch</span></a></li>
                             <li><a href="#section-analytics-kinesis"><span class="lbl">Kinesis</span></a></li>
                             <li><a href="#section-analytics-datapipeline"><span class="lbl">Data Pipeline</span></a></li>
                             <li><a href="#section-analytics-glue"><span class="lbl">Glue</span></a></li>
