Bunch of mappings

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <div class="mobile-menu-left-overlay"></div>
         <nav class="side-menu">
             <ul class="side-menu-list">
-                <li class="magenta">
+                <li class="gold">
                     <a href="#section-dashboard">
                         <i class="font-icon font-icon-dashboard"></i>
                         <span class="lbl">Dashboard</span>
@@ -296,7 +296,6 @@
                             <li><a href="#section-managementandgovernance-opsworks"><span class="lbl">OpsWorks</span></a></li>
                             <li><a href="#section-managementandgovernance-servicecatalog"><span class="lbl">Service Catalog</span></a></li>
                             <li><a href="#section-managementandgovernance-systemsmanager"><span class="lbl">Systems Manager</span></a></li>
-                            <li><a href="#section-managementandgovernance-licensemanager"><span class="lbl">License Manager</span></a></li>
                         </ul>
                     </li>
                     <li class="aquamarine with-sub">
@@ -316,7 +315,7 @@
                         <ul>
                             <li><a href="#section-analytics-athena"><span class="lbl">Athena</span></a></li>
                             <li><a href="#section-analytics-emr"><span class="lbl">EMR</span></a></li>
-                            <li><a href="#section-analytics-elasticsearchservice"><span class="lbl">Elasticsearch</span></a></li>
+                            <li><a href="#section-analytics-elasticsearch"><span class="lbl">Elasticsearch</span></a></li>
                             <li><a href="#section-analytics-kinesis"><span class="lbl">Kinesis</span></a></li>
                             <li><a href="#section-analytics-datapipeline"><span class="lbl">Data Pipeline</span></a></li>
                             <li><a href="#section-analytics-glue"><span class="lbl">Glue</span></a></li>
@@ -398,6 +397,7 @@
                             <li><a href="#section-internetofthings-core"><span class="lbl">Core</span></a></li>
                             <li><a href="#section-internetofthings-1click"><span class="lbl">1-Click</span></a></li>
                             <li><a href="#section-internetofthings-analytics"><span class="lbl">Analytics</span></a></li>
+                            <li><a href="#section-internetofthings-greengrass"><span class="lbl">Greengrass</span></a></li>
                         </ul>
                     </li>
                     <li class="purple with-sub">
@@ -425,6 +425,10 @@
                                     <li id="header-breadcrumb2" class="active"></li>
                                 </ol>
                             </div>
+                            <button id="header-button-copy-cfn" type="button" class="f2-header-button btn btn-default-outline" style="display: none;"><i class="fa fa-files-o"></i>&nbsp;&nbsp;Copy</button>
+                            <button id="header-button-copy-troposphere" type="button" class="f2-header-button btn btn-default-outline" style="display: none;"><i class="fa fa-files-o"></i>&nbsp;&nbsp;Copy</button>
+                            <button id="header-button-copy-cdkts" type="button" class="f2-header-button btn btn-default-outline" style="display: none;"><i class="fa fa-files-o"></i>&nbsp;&nbsp;Copy</button>
+                            <button id="header-button-copy-raw" type="button" class="f2-header-button btn btn-default-outline" style="display: none;"><i class="fa fa-files-o"></i>&nbsp;&nbsp;Copy</button>
                         </div>
                     </div>
                 </header>
