WAF mappings and SSM datatables

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <link rel="stylesheet" href="css/lib/bootstrap/bootstrap.min.css">
 
         <link rel="stylesheet" href="css/separate/vendor/blockui.min.css">
+        <link rel="stylesheet" href="css/separate/pages/widgets.min.css">
 
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/custom.css">
@@ -432,6 +433,185 @@
                         </div>
                     </div>
                 </header>
+
+                <section id="section-dashboard" data-section-breadcrumb1-title="Dashboard" data-section-breadcrumb1-link="#section-dashboard" data-section-title="Dashboard" class="former2-section" style="display: none;">
+                    <div class="row">
+						<div class="col-md-2">
+                            <a href="#"><section class="widget widget-simple-sm">
+								<div class="widget-simple-sm-icon">
+									<img src="img/aws/Compute_light-bg.png" style="width: 64px; height: 64px;" />
+								</div>
+								<div class="widget-simple-sm-bottom">
+                                    <a href="#">Compute</a>
+                                </div>
+							</section></a>
+						</div>
+						<div class="col-md-2">
+                            <section class="widget widget-simple-sm">
+                                <div class="widget-simple-sm-icon">
+                                    <img src="img/aws/Storage_light-bg.png" style="width: 64px; height: 64px;" />
+                                </div>
+                                <div class="widget-simple-sm-bottom">
+                                    <a href="#">Storage</a>
+                                </div>
+                            </section><!--.widget-simple-sm-->
+                        </div>
+						<div class="col-md-2">
+                            <section class="widget widget-simple-sm">
+                                <div class="widget-simple-sm-icon">
+                                    <img src="img/aws/Database_light-bg.png" style="width: 64px; height: 64px;" />
+                                </div>
+                                <div class="widget-simple-sm-bottom">
+                                    <a href="#">Database</a>
+                                </div>
+                            </section><!--.widget-simple-sm-->
+                        </div>
+						<div class="col-md-2">
+                            <section class="widget widget-simple-sm">
+                                <div class="widget-simple-sm-icon">
+                                    <img src="img/aws/Networking-and-Content-Delivery_light-bg.png" style="width: 64px; height: 64px;" />
+                                </div>
+                                <div class="widget-simple-sm-bottom">
+                                    <a href="#">Networking &amp; Content Delivery</a>
+                                </div>
+                            </section><!--.widget-simple-sm-->
+                        </div>
+						<div class="col-md-2">
+                            <section class="widget widget-simple-sm">
+                                <div class="widget-simple-sm-icon">
+                                    <img src="img/aws/Developer-Tools_light-bg.png" style="width: 64px; height: 64px;" />
+                                </div>
+                                <div class="widget-simple-sm-bottom">
+                                    <a href="#">Developer Tools</a>
+                                </div>
+                            </section><!--.widget-simple-sm-->
+                        </div>
+						<div class="col-md-2">
+                            <section class="widget widget-simple-sm">
+                                <div class="widget-simple-sm-icon">
+                                    <img src="img/aws/Robotics_light-bg.png" style="width: 64px; height: 64px;" />
+                                </div>
+                                <div class="widget-simple-sm-bottom">
+                                    <a href="#">Robotics</a>
+                                </div>
+                            </section><!--.widget-simple-sm-->
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-2">
+                            <section class="widget widget-simple-sm">
+                                <div class="widget-simple-sm-icon">
+                                    <img src="img/aws/Management-and-Governance_light-bg.png" style="width: 64px; height: 64px;" />
+                                </div>
+                                <div class="widget-simple-sm-bottom">
+                                    <a href="#">Management &amp; Governance</a>
+                                </div>
+                            </section><!--.widget-simple-sm-->
+                        </div>
+                        <div class="col-md-2">
+                            <section class="widget widget-simple-sm">
+                                <div class="widget-simple-sm-icon">
+                                    <img src="img/aws/Machine-Learning_light-bg.png" style="width: 64px; height: 64px;" />
+                                </div>
+                                <div class="widget-simple-sm-bottom">
+                                    <a href="#">Machine Learning</a>
+                                </div>
+                            </section><!--.widget-simple-sm-->
+                        </div>
+                        <div class="col-md-2">
+                            <section class="widget widget-simple-sm">
+                                <div class="widget-simple-sm-icon">
+                                    <img src="img/aws/Analytics_light-bg.png" style="width: 64px; height: 64px;" />
+                                </div>
+                                <div class="widget-simple-sm-bottom">
+                                    <a href="#">Analytics</a>
+                                </div>
+                            </section><!--.widget-simple-sm-->
+                        </div>
+                        <div class="col-md-2">
+                            <section class="widget widget-simple-sm">
+                                <div class="widget-simple-sm-icon">
+                                    <img src="img/aws/Security-Identity-and-Compliance_light-bg.png" style="width: 64px; height: 64px;" />
+                                </div>
+                                <div class="widget-simple-sm-bottom">
+                                    <a href="#">Security, Identity &amp; Compliance</a>
+                                </div>
+                            </section><!--.widget-simple-sm-->
+                        </div>
+                        <div class="col-md-2">
+                            <section class="widget widget-simple-sm">
+                                <div class="widget-simple-sm-icon">
+                                    <img src="img/aws/Mobile_light-bg.png" style="width: 64px; height: 64px;" />
+                                </div>
+                                <div class="widget-simple-sm-bottom">
+                                    <a href="#">Mobile</a>
+                                </div>
+                            </section><!--.widget-simple-sm-->
+                        </div>
+                        <div class="col-md-2">
+                            <section class="widget widget-simple-sm">
+                                <div class="widget-simple-sm-icon">
+                                    <img src="img/aws/Application-Integration_light-bg.png" style="width: 64px; height: 64px;" />
+                                </div>
+                                <div class="widget-simple-sm-bottom">
+                                    <a href="#">Application Integration</a>
+                                </div>
+                            </section><!--.widget-simple-sm-->
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-2">
+                            <section class="widget widget-simple-sm">
+                                <div class="widget-simple-sm-icon">
+                                    <img src="img/aws/AWS-Cost-Management_light-bg.png" style="width: 64px; height: 64px;" />
+                                </div>
+                                <div class="widget-simple-sm-bottom">
+                                    <a href="#">AWS Cost Management</a>
+                                </div>
+                            </section><!--.widget-simple-sm-->
+                        </div>
+                        <div class="col-md-2">
+                            <section class="widget widget-simple-sm">
+                                <div class="widget-simple-sm-icon">
+                                    <img src="img/aws/Customer-Engagement_light-bg.png" style="width: 64px; height: 64px;" />
+                                </div>
+                                <div class="widget-simple-sm-bottom">
+                                    <a href="#">Customer Engagement</a>
+                                </div>
+                            </section><!--.widget-simple-sm-->
+                        </div>
+                        <div class="col-md-2">
+                            <section class="widget widget-simple-sm">
+                                <div class="widget-simple-sm-icon">
+                                    <img src="img/aws/Business-Application_light-bg.png" style="width: 64px; height: 64px;" />
+                                </div>
+                                <div class="widget-simple-sm-bottom">
+                                    <a href="#">End User Computing</a>
+                                </div>
+                            </section><!--.widget-simple-sm-->
+                        </div>
+                        <div class="col-md-2">
+                            <section class="widget widget-simple-sm">
+                                <div class="widget-simple-sm-icon">
+                                    <img src="img/aws/Internet-of-Things_light-bg.png" style="width: 64px; height: 64px;" />
+                                </div>
+                                <div class="widget-simple-sm-bottom">
+                                    <a href="#">Internet of Things</a>
+                                </div>
+                            </section><!--.widget-simple-sm-->
+                        </div>
+                        <div class="col-md-2">
+                            <section class="widget widget-simple-sm">
+                                <div class="widget-simple-sm-icon">
+                                    <img src="img/aws/Game-Tech_light-bg.png" style="width: 64px; height: 64px;" />
+                                </div>
+                                <div class="widget-simple-sm-bottom">
+                                    <a href="#">Game Development</a>
+                                </div>
+                            </section><!--.widget-simple-sm-->
+                        </div>
+                    </div>
+                </section>
 
                 <section id="section-setup-introduction" data-section-breadcrumb1-title="Setup" data-section-breadcrumb1-link="#section-setup-introduction" data-section-title="Introduction" class="former2-section box-typical steps-numeric-block" style="display: none;">
                     <div class="steps-numeric-header">
